consolidate html files into one index.html; introduce bugs for making content visible/hidden on click

--- a/css/layout.css
+++ b/css/layout.css
@@ -25,10 +25,6 @@
   font-size: 3vh;
 }
 
-.about {
-  display: none;
-}
-
 .connect {
   float: right;
   width: 80vw;
